--- a/index.html
+++ b/index.html
@@ -4,12 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Original URL Extractor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            text-align: center;
+            max-width: 400px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin-top: 0;
+        }
+        input[type="text"] {
+            width: calc(100% - 80px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        p {
+            margin-top: 20px;
+            word-wrap: break-word;
+        }
+    </style>
 </head>
 <body>
-    <h1>Original URL Extractor</h1>
-    <input type="text" id="googleUrl" placeholder="Enter Google search result URL">
-    <button onclick="extractOriginalUrl()">Go</button>
-    <p id="originalUrl"></p>
+    <div class="container">
+        <h1>Original URL Extractor</h1>
+        <input type="text" id="googleUrl" placeholder="Enter Google search result URL">
+        <br>
+        <button onclick="extractOriginalUrl()">Go</button>
+        <p id="originalUrl"></p>
+    </div>
 
     <script>
         function extractOriginalUrl() {
