--- a/index.html
+++ b/index.html
@@ -86,5 +86,17 @@
             alert("Copied the URL: " + originalUrl);
         }
     </script>
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/sw.js').then(function(registration) {
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+</script>
+    
 </body>
 </html>
