--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            background-color: #121212;
+            color: #ffffff;
             margin: 0;
             padding: 0;
             display: flex;
@@ -19,9 +20,9 @@
             text-align: center;
             max-width: 400px;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #212121;
             border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
         }
         h1 {
             margin-top: 0;
@@ -33,6 +34,8 @@
             border: 1px solid #ddd;
             border-radius: 4px;
             box-sizing: border-box;
+            background-color: #333333;
+            color: #ffffff;
         }
         button {
             padding: 10px 20px;
