--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             text-align: center;
             max-width: 400px;
             padding: 20px;
-            background-color: #212121;
+            background-color: #1e1e1e;
             border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
         }
         h1 {
             margin-top: 0;
@@ -31,10 +31,10 @@
             width: calc(100% - 80px);
             padding: 10px;
             margin-bottom: 10px;
-            border: 1px solid #ddd;
+            border: 1px solid #444;
             border-radius: 4px;
             box-sizing: border-box;
-            background-color: #333333;
+            background-color: #333;
             color: #ffffff;
         }
         button {
